--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -4,10 +4,10 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{14E94940-D2D6-419B-BED3-C38C1FD9B8D9}</ProjectGuid>
+    <ProjectGuid>{CC5733DE-CD02-451A-8371-2F6067A5CE07}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>RxMobile</RootNamespace>
-    <AssemblyName>RxMobile</AssemblyName>
+    <RootNamespace>RxApp</RootNamespace>
+    <AssemblyName>RxApp</AssemblyName>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
@@ -31,13 +31,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewStack.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Stack.cs" />
-    <Compile Include="IMobileApplication.cs" />
-    <Compile Include="MobileModel.cs" />
-    <Compile Include="Lifecycle.cs" />
     <Compile Include="ReactiveObject.cs" />
-    <Compile Include="IController.cs" />
+    <Compile Include="Controller.cs" />
+    <Compile Include="ModelStack.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
