Change APIs to prefer returning IDisposable instead of IInitializable

--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -34,8 +34,8 @@
     <Compile Include="Interfaces.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="ReactiveObject.cs" />
-    <Compile Include="Controller.cs" />
     <Compile Include="NavigationStack.cs" />
+    <Compile Include="Service.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
