--- a/RxApp.Android/RxApp.Android.csproj
+++ b/RxApp.Android/RxApp.Android.csproj
@@ -63,9 +63,9 @@
   <ItemGroup>
     <Compile Include="AndroidScheduler.cs" />
     <Compile Include="StartupActivity.cs" />
-    <Compile Include="ViewPresenter.cs" />
     <Compile Include="Activity.cs" />
     <Compile Include="Application.cs" />
+    <Compile Include="AndroidModelBinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxApp\RxApp.csproj">
