--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -31,12 +31,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Interfaces.cs" />
     <Compile Include="Stack.cs" />
     <Compile Include="ReactiveObject.cs" />
     <Compile Include="NavigationStack.cs" />
     <Compile Include="Service.cs" />
-    <Compile Include="MobileModel.cs" />
+    <Compile Include="Mobile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
