Use the RxApp.Example namespace. Add unhandled exception handler.

--- a/RxApp.Example.Android/RxApp.Example.Android.csproj
+++ b/RxApp.Example.Android/RxApp.Example.Android.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{848066BF-3AC4-4984-B106-7C18D778169E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>RxApp.Example.Android</RootNamespace>
+    <RootNamespace>RxApp.Example</RootNamespace>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <AndroidResgenClass>Resource</AndroidResgenClass>
