--- a/RxApp.Example.iOS/RxApp.Example.iOS.csproj
+++ b/RxApp.Example.iOS/RxApp.Example.iOS.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{1E55B888-7CD4-4E93-B6A8-E0F81A8FE462}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>RxApp.Example.iOS</RootNamespace>
+    <RootNamespace>RxApp.Example</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>RxAppExampleiOS</AssemblyName>
   </PropertyGroup>
