--- a/RxApp.Android/packages.config
+++ b/RxApp.Android/packages.config
@@ -7,5 +7,6 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-Main" version="2.2.5" targetFramework="MonoAndroid44" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="MonoAndroid44" />
-  <package id="Splat" version="1.6.0" targetFramework="MonoAndroid50" />
+  <package id="Splat" version="1.6.1" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid50" />
 </packages>
