--- a/RxApp.Example.Android/RxApp.Example.Android.csproj
+++ b/RxApp.Example.Android/RxApp.Example.Android.csproj
@@ -61,6 +61,9 @@
     <Reference Include="Splat">
       <HintPath>..\packages\Splat.1.6.1\lib\monoandroid\Splat.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Android.Support.v4">
+      <HintPath>..\packages\Xamarin.Android.Support.v4.21.0.3.0\lib\MonoAndroid10\Xamarin.Android.Support.v4.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Resources\Resource.designer.cs" />
