Add in RxFragmentActivity and RxActionBarActivity to make using compat packages easier.

--- a/RxApp.Example.Android/Properties/AndroidManifest.xml
+++ b/RxApp.Example.Android/Properties/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="RxApp.Example.Android">
     <uses-sdk android:minSdkVersion="14" />
     <application android:label="@string/app_name" 
-                 android:name=".RxAppExampleApplication">
+                 android:name=".RxAppExampleApplication"
+                 android:theme="@style/RxAppTheme">
 
         <activity android:name="rxapp.StartupActivity" 
                   android:theme="@style/SplashTheme"
