--- a/RxApp.Example.Android/packages.config
+++ b/RxApp.Example.Android/packages.config
@@ -10,4 +10,5 @@
   <package id="Splat" version="1.6.1" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="21.0.3.0" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Insights" version="1.9.0.106" targetFramework="MonoAndroid50" />
 </packages>
