--- a/RxApp.Example.Android/Properties/AndroidManifest.xml
+++ b/RxApp.Example.Android/Properties/AndroidManifest.xml
@@ -3,10 +3,9 @@
     <uses-sdk android:minSdkVersion="14" />
     <application android:label="@string/app_name" 
                  android:name=".RxAppExampleApplication"
-                 android:theme="@style/RxAppTheme">
+                 android:theme="@style/SplashTheme">
 
         <activity android:name="rxapp.StartupActivity" 
-                  android:theme="@style/SplashTheme"
                   android:label="@string/app_name">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
