Add RxList and and an android adapter.

--- a/RxApp.Android/RxApp.Android.csproj
+++ b/RxApp.Android/RxApp.Android.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Interfaces.cs" />
     <Compile Include="RxActivity.cs" />
     <Compile Include="RxApplication.cs" />
+    <Compile Include="RxListAdapter.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxApp\RxApp.csproj">
