Add a android scheduler and use it for bindings. Fix up naming. Simplify IRxProperty implementation.

--- a/RxApp.Android/RxApp.Android.csproj
+++ b/RxApp.Android/RxApp.Android.csproj
@@ -68,6 +68,7 @@
     <Compile Include="RxApplication.cs" />
     <Compile Include="RxListAdapter.cs" />
     <Compile Include="Bindings.cs" />
+    <Compile Include="Scheduler.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxApp\RxApp.csproj">
