Add some useful combine methods for observing view models

--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -38,6 +38,7 @@
     <Compile Include="RxCommand.cs" />
     <Compile Include="RxProperty.cs" />
     <Compile Include="Interfaces.cs" />
+    <Compile Include="Observables.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
