--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -38,7 +38,8 @@
     <Compile Include="RxCommand.cs" />
     <Compile Include="RxProperty.cs" />
     <Compile Include="Interfaces.cs" />
-    <Compile Include="Observables.cs" />
+    <Compile Include="Reflection.cs" />
+    <Compile Include="RxExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
