--- a/RxApp.iOS/RxApp.iOS.csproj
+++ b/RxApp.iOS/RxApp.iOS.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RxUIApplicationDelegateHelper.cs" />
     <Compile Include="RxUIViewController.cs" />
+    <Compile Include="Observable.cs" />
+    <Compile Include="Bindings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
