Seperate Activation into a seperate base class.

--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -39,7 +39,7 @@
     <Compile Include="Reflection.cs" />
     <Compile Include="RxExtensions.cs" />
     <Compile Include="Activation.cs" />
-    <Compile Include="NavigationModel.cs" />
+    <Compile Include="Models.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
