Add RxFragment that supports activation.

--- a/RxApp.Android/RxApp.Android.csproj
+++ b/RxApp.Android/RxApp.Android.csproj
@@ -64,6 +64,7 @@
     <Compile Include="RxApplication.cs" />
     <Compile Include="Bindings.cs" />
     <Compile Include="Observable.cs" />
+    <Compile Include="RxFragment.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxApp\RxApp.csproj">
