--- a/RxApp.Android.Support.V4/RxApp.Android.Support.V4.csproj
+++ b/RxApp.Android.Support.V4/RxApp.Android.Support.V4.csproj
@@ -4,11 +4,15 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{C25BB5A4-5A21-4837-8F8F-B46673937F6D}</ProjectGuid>
+    <ProjectGuid>{BBEE95A4-6F63-4B9A-A3BD-99EF3901EB95}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>RxApp</RootNamespace>
+    <RootNamespace>RxApp.Android.Support.V4</RootNamespace>
+    <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
+    <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
+    <AndroidResgenClass>Resource</AndroidResgenClass>
+    <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <AssemblyName>RxApp.Android</AssemblyName>
+    <AssemblyName>RxApp.Android.Support.V4</AssemblyName>
     <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -36,6 +40,9 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Mono.Android" />
+    <Reference Include="Xamarin.Android.Support.v4">
+      <HintPath>..\packages\Xamarin.Android.Support.v4.21.0.3.0\lib\MonoAndroid10\Xamarin.Android.Support.v4.dll</HintPath>
+    </Reference>
     <Reference Include="System.Reactive.Interfaces">
       <HintPath>..\packages\Rx-Interfaces.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.Interfaces.dll</HintPath>
     </Reference>
@@ -49,15 +56,13 @@
       <HintPath>..\packages\Rx-PlatformServices.2.2.5\lib\portable-windows8+net45+wp8\System.Reactive.PlatformServices.dll</HintPath>
     </Reference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="StartupActivity.cs" />
-    <Compile Include="AndroidInterfaces.cs" />
-    <Compile Include="Interfaces.cs" />
     <Compile Include="RxActivity.cs" />
-    <Compile Include="RxApplication.cs" />
     <Compile Include="Bindings.cs" />
-    <Compile Include="Observable.cs" />
     <Compile Include="RxFragment.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,8 +70,9 @@
       <Project>{CC5733DE-CD02-451A-8371-2F6067A5CE07}</Project>
       <Name>RxApp</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\RxApp.Android\RxApp.Android.csproj">
+      <Project>{C25BB5A4-5A21-4837-8F8F-B46673937F6D}</Project>
+      <Name>RxApp.Android</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
