--- a/RxApp.XamarinForms/packages.config
+++ b/RxApp.XamarinForms/packages.config
@@ -5,5 +5,6 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Rx-Main" version="2.2.5" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
-  <package id="Xamarin.Forms" version="1.3.1.6296" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
+  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Forms" version="1.4.0.6341" targetFramework="MonoAndroid50" />
 </packages>
