--- a/RxApp/RxApp.csproj
+++ b/RxApp/RxApp.csproj
@@ -41,7 +41,7 @@
     <Compile Include="Bindings.cs" />
     <Compile Include="Observable.cs" />
     <Compile Include="Disposable.cs" />
-    <Compile Include="NavigationController.cs" />
+    <Compile Include="NavigationApp.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <ItemGroup>
