Rework the iOS connector, making it alot easier to use.

--- a/RxApp.iOS/RxApp.iOS.csproj
+++ b/RxApp.iOS/RxApp.iOS.csproj
@@ -55,7 +55,8 @@
     <Compile Include="Observable.cs" />
     <Compile Include="Bindings.cs" />
     <Compile Include="Scheduler.cs" />
-    <Compile Include="RxUIApplicationDelegate.cs" />
+    <Compile Include="RxUINavigationController.cs" />
+    <Compile Include="RxiOSApplicationBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
