update AssemblyInfo.cs files

--- a/RxApp.Android.Support.V4/RxApp.Android.Support.V4.csproj
+++ b/RxApp.Android.Support.V4/RxApp.Android.Support.V4.csproj
@@ -64,6 +64,7 @@
     <Compile Include="RxActivity.cs" />
     <Compile Include="Bindings.cs" />
     <Compile Include="RxFragment.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxApp\RxApp.csproj">
@@ -74,5 +75,8 @@
       <Project>{C25BB5A4-5A21-4837-8F8F-B46673937F6D}</Project>
       <Name>RxApp.Android</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
