--- a/RxApp.Android.Support.V7.AppCompat/RxApp.Android.Support.V7.AppCompat.csproj
+++ b/RxApp.Android.Support.V7.AppCompat/RxApp.Android.Support.V7.AppCompat.csproj
@@ -56,6 +56,7 @@
   <Import Project="$(MSBuildExtensionsPath)\Novell\Novell.MonoDroid.CSharp.targets" />
   <ItemGroup>
     <Compile Include="RxActivity.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxApp\RxApp.csproj">
@@ -66,5 +67,8 @@
       <Project>{C25BB5A4-5A21-4837-8F8F-B46673937F6D}</Project>
       <Name>RxApp.Android</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 </Project>
