--- a/RxApp.XamarinForms/RxApp.XamarinForms-Android.csproj
+++ b/RxApp.XamarinForms/RxApp.XamarinForms-Android.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Debug\Monoandroid\</OutputPath>
-    <IntermediateOutputPath>obj\Debug\Monoandroid\</IntermediateOutputPath>
+    <IntermediateOutputPath>obj\Debug\MonoAndroid\</IntermediateOutputPath>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -29,13 +29,13 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\Monoandroid\</OutputPath>
-    <IntermediateOutputPath>obj\Release\Monoandroid\</IntermediateOutputPath>
-    <DebugType>full</DebugType>
+    <IntermediateOutputPath>obj\Release\MonoAndroid\</IntermediateOutputPath>
     <Optimize>true</Optimize>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
     <ConsolePause>false</ConsolePause>
+    <DocumentationFile>bin\Release\Monoandroid\RxApp.XamarinForms.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -86,6 +86,7 @@
   <Import Project="..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="RxApp.XamarinForms.nuspec" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RxApp\RxApp.csproj">
